rework click